--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,26 @@
 sudo: required
 dist: trusty
 
-before_script: "bundle install"
+before_script: bundle install
 script:
   - bundle exec rake test_app
   - bundle exec rake spec
 
 env:
-  - DB=mysql
+  # - DB=mysql
   - DB=postgres
 
 language: ruby
 
 rvm:
-  - 2.3.1
-  - 2.2.7
+  - 2.7.0
+  # - 2.6.0
+  # - 2.5.0
 
 gemfile:
-  - gemfiles/spree_3.1.gemfile
-  - gemfiles/spree_3.2.gemfile
-  - gemfiles/spree_3.3.gemfile
+  # - gemfiles/spree_3.7.gemfile
+  # - gemfiles/spree_4.0.gemfile
+  # - gemfiles/spree_4.1.gemfile
   - gemfiles/spree_master.gemfile
 
 before_install:
